gitops/manifests/authentik/pgbouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgbouncer
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      containers:
        - name: pgbouncer
          image: edoburu/pgbouncer:1.21.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: config
              mountPath: /etc/pgbouncer/pgbouncer.ini
              subPath: pgbouncer.ini
      volumes:
        - name: config
          configMap:
            name: pgbouncer-config
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: authentik
spec:
  selector:
    app: pgbouncer
  ports:
    - port: 5432
      targetPort: 5432
